Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -6,9 +6,9 @@
 trigger:
 - master
 
-pool:
+pool: MyAgentPool
   #vmImage: 'windows-latest'
-  name: 'MyAgentPool'
+  #name: 'MyAgentPool'
 
 variables:
   solution: '**/*.sln'
